# CodePulse

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_FIXES.md  GETTING_STARTED.md  GITHUB_STEPS_AR.md  GITHUB_UPLOAD.md  GITHUB_UPLOAD_GUIDE.md  LANGUAGE_STATS.md  LICENSE  LOGO.txt  MANIFEST.in  PROJECT_STATS.md  QUICK_START.md  README.md  TEST_EXAMPLE.py  USAGE_GUIDE_AR.md  WELCOME.md  WHY_CODEPULSE.md  comprehensive_scan.py  demo.py  json_diagnostic.py  package.json  pyproject.toml  reports_manager.py  requirements.txt  sentinel.config.json  setup_new.py  tsconfig.json
.github/workflows/: ci.yml  scorecard.yml  semgrep.yml
docs/: ADVANCED_FEATURES.md  REPORTS_MANAGEMENT.md  TECHNICAL_ARCHITECTURE.md
examples/: README.md  sample.js  sample.ts
src/core/: advanced_metrics.py  advanced_security.py  ai_engine.py  analyzer.py  cli.py  clone_detection.py  code_patterns.py  cross_file_analysis.py  deep_analysis.py  deep_analysis_standalone.py  js_scanner.py  performance_analyzer.py  quality_trends.py  scanner.py  smell_detector.py
src/modules/: security.py
src/utils/: analyzer.ts  scanner_utils.js
tests/: test_scanner.py
